# Pi-Pico-Chip8-Emulator

./: .gitignore  CMakeLists.txt  README.md  chip8.c  chip8.h  romtoh.sh  test.c  upload.sh
include/: chip8.h  display.h  keyboard.h  settings.h  speaker.h
src/: chip8.c  display.c  emulator.c  keyboard.c  speaker.c
